<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App37</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_lang_eng">English</string>
    <string name="action_lang_hindi">हिन्दी</string>
    <string name="action_lang_tamil">தமிழ்</string>
    <string name="action_reload_file">Reload the file</string>
    <string name="tst_msg_changed_to_tamil">இயல்பு மொழி தமிழ் மாற்றப்பட்டது</string>
    <string name="tst_msg_changed_to_hindi">डिफ़ॉल्ट भाषा तमिल के लिए बदल दिया</string>

    <!-- Activity Details -->
    <string name="loan_entry">Loan Entry</string>

    <!-- Language Package -->


    <!-- Login Activity -->
    <string name="welcome">Welcome!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Don\'t have account? Sign Up</string>
    <string name="strLaVersion">Version <b>1.1</b></string>
    <string name="strLaMenu">Menu</string>

    <!-- Main Activity -->
    <string name="strMaLblAccountNo">Account No</string>
    <string name="strMaLblName">Name</string>
    <string name="strMaLblMobile">Mobile</string>
    <string name="strMaLblOpeningDate">Opening Date</string>
    <string name="strMaLblNoOfDays">Days spent</string>
    <string name="strMaLblLoanAmt">Opening Bal</string>
    <string name="strMaLblCurrentDue">Due amount</string>
    <string name="strMaLblPaidDue">Coll Amt</string>
    <string name="strMalblPrev">&lt;- Prev</string>
    <string name="strMalblSave">Save</string>
    <string name="strMalblNext">Next -&gt;</string>

    <!-- Select Option Activity -->
    <string name="strAsoLblLoanDetails">Loan</string>
    <string name="strAsoLblReport">Report</string>
    <string name="strAsoLblVehicleDetails">Vehicle details</string>
    <string name="strAsoLblGenCsv">Generate CSV</string>
    <string name="strAsoLblSettings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_select_option">SelectOptionActivity</string>
    <string name="title_acitivit_home">Home</string>
    <string name="title_activity_report">Report</string>
    <string name="title_activity_vehicle">Vehicle Details</string>

    <!-- Vehicle Activity -->
    <string name="strVaLblVehiclNo">Vehicle No</string>
    <string name="strVaLblStartKM">Start KM</string>
    <string name="strVaLblEndKM">End KM</string>
    <string name="strVaLblSave">Save</string>
    <string name="strVaLblOtherExpenses">Other Expenses</string>
    <string name="title_activity_file_explore">FileExplore</string>

</resources>
