<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_gradient"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
     <ScrollView
         android:id="@+id/maScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/maFooterLayout" >
         
        <LinearLayout
			android:orientation="vertical" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:focusableInTouchMode="true"> 
        
	        <LinearLayout
				android:orientation="horizontal" 
				android:weightSum="5"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
	            
	            <TextView
	                android:id="@+id/maTvAccountNo"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/strMaLblAccountNo"
	                android:layout_weight="2"
	                android:textSize="17sp" 
					android:ems="8"
					android:textColor="@color/white"
	                android:textStyle="bold"/>
				<EditText 
					android:id="@+id/maEtAccountNo" 
					android:layout_width="168dp" 
					android:layout_height="wrap_content"
					android:layout_weight="3"
					android:ems="10"
					android:inputType="number"
					android:background="@android:drawable/edit_text"
					android:enabled="false" />
				<ImageButton 
				    android:id="@+id/maIbSearchAccNo"
				    android:layout_width="45dp"
			        android:layout_height="45dp"
			        android:background="@null"
			        android:onClick="searchIbOnClick"
			        android:src="@drawable/ic_action_search" />
			</LinearLayout>
			
	        <LinearLayout
				android:orientation="horizontal" 
				android:weightSum="5"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
	            <TextView
	                android:id="@+id/maTvName"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/strMaLblName"
	                android:layout_weight="2"
	                android:textSize="17sp"
					android:ems="8"
	                android:textStyle="bold" 
	                android:textColor="@color/white"/>
				<EditText
				    android:id="@+id/maEtName"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="3"
				    android:background="@android:drawable/edit_text"
				    android:ems="10" 
				    android:inputType="text"
				    android:enabled="false"/>
			</LinearLayout>
			
	        <LinearLayout
				android:orientation="horizontal" 
				android:weightSum="5"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
	            <TextView
	                android:id="@+id/maTvMobile"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/strMaLblMobile"
	                android:layout_weight="2"
	                android:textSize="17sp" 
					android:ems="8"
	                android:textStyle="bold"
	                android:textColor="@color/white" />
				<EditText
				    android:id="@+id/maEtMobile"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="3"
				    android:ems="10"
				    android:background="@android:drawable/edit_text" 
				    android:inputType="text"
				    android:enabled="false"/>
			</LinearLayout>
			
	        <LinearLayout
				android:orientation="horizontal" 
				android:weightSum="5"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
	            <TextView
	                android:id="@+id/maTvOpeningDate"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/strMaLblOpeningDate"
	                android:layout_weight="2"
	                android:textSize="17sp" 
					android:ems="8"
	                android:textStyle="bold" 
	                android:textColor="@color/white"/>
				<EditText
				    android:id="@+id/maEtOpeningDate"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="3"
				    android:ems="10"
				    android:background="@android:drawable/edit_text" 
				    android:inputType="date"
				    android:enabled="false"/>
			</LinearLayout>
	
	         <LinearLayout
				android:orientation="horizontal" 
				android:weightSum="5"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
	            <TextView
	                android:id="@+id/maTvNoOfDays"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/strMaLblNoOfDays"
	                android:layout_weight="2"
	                android:textSize="17sp" 
					android:ems="8"
	                android:textStyle="bold"
	                android:textColor="@color/white"/>
				<EditText
				    android:id="@+id/maEtNoOfDays"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="3"
				    android:ems="10"
				    android:background="@android:drawable/edit_text" 
				    android:inputType="number"
				    android:enabled="false"/>
			</LinearLayout>
	        
	        <LinearLayout
				android:orientation="horizontal" 
				android:weightSum="5"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
	            <TextView
	                android:id="@+id/maTvLoanAmount"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/strMaLblLoanAmt"
	                android:layout_weight="2"
	                android:textSize="17sp" 
					android:ems="8"
	                android:textStyle="bold" 
	                android:textColor="@color/white"/>
				<EditText
				    android:id="@+id/maEtLoanAmount"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="3"
				    android:ems="10"
				    android:background="@android:drawable/edit_text" 
				    android:inputType="number"
				    android:enabled="false"/>
			</LinearLayout>
	        
	        <LinearLayout
				android:orientation="horizontal" 
				android:weightSum="5"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
	            <TextView
	                android:id="@+id/maTvCurrentDue"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/strMaLblCurrentDue"
	                android:layout_weight="2"
	                android:textSize="17sp"
	                android:ems="8" 
	                android:textStyle="bold" 
	                android:textColor="@color/white"/>
				<EditText
				    android:id="@+id/maEtCurrentDue"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_weight="3"
				    android:ems="10"
				    android:background="@android:drawable/edit_text" 
				    android:inputType="number"
				    android:enabled="false"/>
			</LinearLayout>
			
	        <LinearLayout
				android:orientation="horizontal" 
				android:weightSum="5"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
	            <TextView
	                android:id="@+id/maTvPaidDue"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/strMaLblPaidDue"
	                android:layout_weight="2"
	                android:textSize="17sp"
	                android:ems="8" 
	                android:textStyle="bold" 
	                android:textColor="@color/white"/>
				<EditText
				    android:id="@+id/maEtPaidDue"
				    android:layout_width="168dp"
				    android:layout_height="wrap_content"
				    android:layout_weight="3"
				    android:ems="10"
				    android:background="@android:drawable/edit_text"
				    android:inputType="number"/>
				<ImageButton 
				    android:id="@+id/maIbClearPaidDue"
				    android:layout_width="45dp"
			        android:layout_height="45dp"
			        android:background="@null"
			        android:onClick="clearIbOnClick"
			        android:src="@drawable/ic_action_remove" />
			</LinearLayout>

		</LinearLayout>

	</ScrollView>

    <LinearLayout
        android:id="@+id/maFooterLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="5.0"
        android:orientation="horizontal" >

		    <Button
		        android:id="@+id/maBtnPrev"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1.0"
		        android:onClick="prevbtnOnclick"
		        android:text="@string/strMalblPrev" 
		        android:background="@drawable/bg_button_rounded_wop" 
		        android:textColor="@color/white"/>
		
		    <Button
		        android:id="@+id/maBtnSave"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="3.0"
		        android:text="@string/strMalblSave"
		        android:background="@drawable/bg_button_rounded_wop" 
		        android:layout_marginRight="3dp"
		        android:layout_marginLeft="3dp"
		        android:textColor="@color/white"
		        android:onClick="savebtnOnClick"/>
		        
		    <Button
		        android:id="@+id/maBtnNext"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1.0"
		        android:onClick="nextbtnOnclick"
		        android:text="@string/strMalblNext"
		        android:background="@drawable/bg_button_rounded_wop" 
		        android:textColor="@color/white"/>
    
	</LinearLayout>

</RelativeLayout>